@@ -1,3 +1,0 @@
-#Build Number for ANT. Do not edit!
-#Tue Jun 26 12:49:17 CEST 2012
-build.number=471
