@@ -15,7 +15,6 @@ import static org.junit.Assert.assertTrue;
 
 import java.util.Properties;
 
-import org.junit.Before;
 import org.junit.Test;
 
 import de.highbyte_le.weberknecht.Version.VersionFormat;
@@ -26,10 +25,6 @@ import de.highbyte_le.weberknecht.Version.VersionFormat;
  * @author pmairif
  */
 public class VersionTest {
-
-	@Before
-	public void setUp() throws Exception {
-	}
 
 	/**
 	 * Simple test set, just major, minor and patch
@@ -46,10 +41,8 @@ public class VersionTest {
 		assertEquals(2, actual.getMinor());
 		assertEquals(3, actual.getPatch());
 		
-		assertFalse(actual.hasBuildNumber());
 		assertFalse(actual.hasBranch());
 		
-		assertEquals(0, actual.getBuildNumber());
 		assertNull(actual.getBranch());
 	}
 
@@ -62,19 +55,15 @@ public class VersionTest {
 		props.setProperty("version.weberknecht.major", "1");
 		props.setProperty("version.weberknecht.minor", "2");
 		props.setProperty("version.weberknecht.patch", "3");
-		props.setProperty("version.weberknecht.build", "99");
 		props.setProperty("version.weberknecht.branch", "foo");
-		props.setProperty("version.weberknecht.state", "beta");
 		
 		Version actual = Version.parseProperties(props);
 		assertEquals(1, actual.getMajor());
 		assertEquals(2, actual.getMinor());
 		assertEquals(3, actual.getPatch());
 		
-		assertTrue(actual.hasBuildNumber());
 		assertTrue(actual.hasBranch());
 		
-		assertEquals(99, actual.getBuildNumber());
 		assertEquals("foo", actual.getBranch());
 	}
 	
@@ -83,10 +72,8 @@ public class VersionTest {
 	 */
 	@Test
 	public void testGetVersionString() {
-		Version version = new Version(2, 1, 21, new Integer(100), "develop");
+		Version version = new Version(2, 1, 21, "develop");
 		assertEquals("2.1", version.getVersionString(VersionFormat.SHORT));
-		assertEquals("2.1.21-develop", version.getVersionString(VersionFormat.DEFAULT));
-		assertEquals("2.1.21-develop b100", version.getVersionString(VersionFormat.FULL));
+		assertEquals("2.1.21-develop", version.getVersionString(VersionFormat.FULL));
 	}
-
 }
