@@ -2,7 +2,6 @@
 version.weberknecht.major=0
 version.weberknecht.minor=12
 version.weberknecht.patch=2
-version.weberknecht.build=470
 
 #comment or remove the following line in releases
 version.weberknecht.branch=develop
