@@ -1,8 +1,0 @@
-# @COMMENT@
-version.weberknecht.major=0
-version.weberknecht.minor=12
-version.weberknecht.patch=2
-version.weberknecht.build=@BUILDNUMBER@
-
-#comment or remove the following line in releases
-version.weberknecht.branch=develop
