@@ -3,12 +3,13 @@ next (1.0):
 	- Controller moved to de.highbyte_le.weberknecht.Controller
 	- DataAction2 renamed to DataAction
 	- DataAction.writeData() throws ActionExecutionException
-	- The method needsDatabase of the interface DatabaseCapable was droped and actions that need a database just have to implement the interface.
+	- The method needsDatabase of the interface DatabaseCapable was dropped and actions that need a database just have to implement the interface.
 	- generic beans removed
 	- ReqUtil removed
 	- AreaCapableRouter now default
 	- actions don't throw ServletExceptions any more.
 	- rpx-stuff moved to module 
+	- build number and Version.DEFAULT was dropped
 
 0.12.2:
 	- bugfix: fixed null pointer exception, when routing didn't match.
